--- a/Uebung_04_RestService/nbproject/project.properties
+++ b/Uebung_04_RestService/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Uebung_04_RestService
+application.vendor=Benedikt
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Uebung_04_RestService.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.org.restlet.jar=C:\\Users\\Benedikt\\Desktop\\Schule\\POSE\\Java\\\u00dcbung_04\\org.restlet.jar
+file.reference.org.restlet.ext.jaxb.jar=../org.restlet.ext.jaxb.jar
+file.reference.org.restlet.jar=../org.restlet.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.org.restlet.ext.jaxb.jar}:\
     ${file.reference.org.restlet.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
